apps/kolkhis/dagster-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dagster-basic-auth
  namespace: kolkhis
spec:
  basicAuth:
    secret: dagster-basic-auth
