apps/kolkhis/dagster-code-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dagster-code
  namespace: kolkhis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dagster-code
  template:
    metadata:
      labels:
        app: dagster-code
    spec:
      serviceAccountName: dagster
      containers:
        - name: dagster-code
          image: ghcr.io/euxinedata/dagster:latest
          command: ["dagster", "api", "grpc", "-h", "0.0.0.0", "-p", "3030"]
          ports:
            - containerPort: 3030
          volumeMounts:
            - name: dagster-instance
              mountPath: /opt/dagster/dagster.yaml
              subPath: dagster.yaml
          livenessProbe:
            tcpSocket:
              port: 3030
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3030
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: dagster-instance
          configMap:
            name: dagster-instance
