apps/kolkhis/dagster-webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dagster-webserver
  namespace: kolkhis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dagster-webserver
  template:
    metadata:
      labels:
        app: dagster-webserver
    spec:
      serviceAccountName: dagster
      containers:
        - name: dagster-webserver
          image: ghcr.io/euxinedata/dagster:latest
          command: ["dagster-webserver", "-h", "0.0.0.0", "-p", "3000", "-w", "/opt/dagster/workspace.yaml"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: dagster-instance
              mountPath: /opt/dagster/dagster.yaml
              subPath: dagster.yaml
          livenessProbe:
            httpGet:
              path: /server_info
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /server_info
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: dagster-instance
          configMap:
            name: dagster-instance
