apps/kolkhis/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kolkhis-frontend
  namespace: kolkhis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kolkhis-frontend
  template:
    metadata:
      labels:
        app: kolkhis-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/euxinedata/kolkhis-frontend:2466759
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
