apps/kolkhis/lakekeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lakekeeper
  namespace: kolkhis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lakekeeper
  template:
    metadata:
      labels:
        app: lakekeeper
    spec:
      containers:
        - name: lakekeeper
          image: quay.io/lakekeeper/catalog:latest
          args: ["serve"]
          ports:
            - containerPort: 8181
          livenessProbe:
            exec:
              command: ["/home/nonroot/lakekeeper", "healthcheck"]
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["/home/nonroot/lakekeeper", "healthcheck"]
            initialDelaySeconds: 10
            periodSeconds: 5
