apps/kolkhis/shell-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kolkhis-shell
  namespace: kolkhis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kolkhis-shell
  template:
    metadata:
      labels:
        app: kolkhis-shell
    spec:
      containers:
        - name: shell
          image: ghcr.io/euxinedata/kolkhis-shell:latest
          ports:
            - containerPort: 22
          volumeMounts:
            - name: homes
              mountPath: /home
            - name: ssh-dir
              mountPath: /home/shelluser/.ssh
      volumes:
        - name: homes
          persistentVolumeClaim:
            claimName: homes-pvc
        - name: ssh-keys
          secret:
            secretName: shell-ssh-keys
        - name: ssh-dir
          emptyDir: {}
