apps/kolkhis/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kolkhis-backend
  namespace: kolkhis
spec:
  selector:
    app: kolkhis-backend
  ports:
    - port: 80
      targetPort: 8000
