apps/kolkhis/dagster-code-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dagster-code
  namespace: kolkhis
spec:
  selector:
    app: dagster-code
  ports:
    - port: 3030
      targetPort: 3030
