apps/kolkhis/dagster-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dagster-webserver
  namespace: kolkhis
spec:
  selector:
    app: dagster-webserver
  ports:
    - port: 80
      targetPort: 3000
