apps/kolkhis/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kolkhis-frontend
  namespace: kolkhis
spec:
  selector:
    app: kolkhis-frontend
  ports:
    - port: 80
      targetPort: 80
