apps/kolkhis/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: kolkhis
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - port: 3000
      targetPort: 3000
