apps/kolkhis/lakekeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lakekeeper
  namespace: kolkhis
spec:
  type: NodePort
  selector:
    app: lakekeeper
  ports:
    - port: 8181
      targetPort: 8181
      nodePort: 30181
