apps/kolkhis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kolkhis
  namespace: kolkhis
spec:
  selector:
    app: kolkhis
  ports:
    - port: 80
      targetPort: 8000
