apps/kolkhis/shell-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell
  namespace: kolkhis
spec:
  selector:
    app: kolkhis-shell
  ports:
    - port: 22
      targetPort: 22
